# BIliBIlAgent

./: .env.example  .gitignore  FRONTEND_API.md  LICENSE  RAG_REFACTOR.md  README.md  REFACTOR_PLAN.md  feature_list.json  init.sh  main.py  progress.txt  pyproject.toml
.playwright-cli/: page-2026-03-26T10-05-43-404Z.yml  page-2026-03-26T10-06-33-518Z.yml  page-2026-03-26T10-13-04-821Z.yml  page-2026-03-26T10-13-21-174Z.yml  page-2026-03-26T10-13-49-595Z.yml  page-2026-03-26T10-14-42-687Z.yml  page-2026-03-26T14-52-57-123Z.yml  page-2026-03-26T14-55-30-653Z.yml  page-2026-03-26T14-55-54-802Z.yml  page-2026-03-26T14-56-18-070Z.yml  page-2026-03-26T14-57-01-235Z.yml  page-2026-03-26T14-57-21-945Z.yml  page-2026-03-26T14-57-44-695Z.yml
app/: __init__.py  main.py
app/agent/: events.py  service.py  tools.py  types.py
app/api/: schemas.py
app/api/routes/: chat.py
app/core/: config.py
app/db/: repository.py  schema.py
app/services/: bilibili_favorites.py  bilibili_import.py  knowledge_index.py  knowledge_qa.py  knowledge_retrieval.py  llm.py  runtime_audit.py  session_memory.py  user_memory.py
data/: app.db  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal
data/chroma/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: agent.ts  bilibili.ts  client.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/pages/: ChatPage.css  ChatPage.tsx  FoldersPage.css  FoldersPage.tsx  ImportProgressPage.css  ImportProgressPage.tsx  LoginPage.css  LoginPage.tsx  MemoryPage.css  MemoryPage.tsx  TasksPage.css  TasksPage.tsx  VideosPage.css  VideosPage.tsx
tests/: test_agent_api.py  test_router.py  test_stream.py
