[project]
name = "bilibilagent"
version = "0.1.0"
description = "A Bilibili-focused agent for favorite-folder ingestion and question answering."
authors = [
    {name = "zhangzibo",email = "zzb1230920@163.com"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langgraph>=0.6.0,<1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "openai>=1.68.0,<2.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pytest>=8.3.0,<9.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
