[project]
name = "bilibilagent"
version = "0.1.0"
description = "A Bilibili-focused agent for favorite-folder ingestion and question answering."
authors = [
    {name = "zhangzibo",email = "zzb1230920@163.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "chromadb>=0.5.23,<0.6.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langchain-core>=1.2.20,<2.0.0",
    "langchain-text-splitters>=0.3.8,<1.0.0",
    "langgraph>=0.6.0,<1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "openai (>=2.0.0,<3.0.0)",
    "onnxruntime>=1.18.0,<1.20.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pytest>=8.3.0,<9.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "dashscope (>=1.25.15,<2.0.0)",
]


[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
